# apollo.M1.GNN

./: .gitignore  CLAUDE.md  Makefile  apollo_M1_GNN.ipynb  pyproject.toml  requirements.txt
config/: graph.yaml  model.yaml  paths.yaml  train.yaml
docs/: data_schema.md  evaluation.md  graph_construction.md  model.md
notebooks/: cleanup_drive_outputs.ipynb
scripts/: baseline_cf.py  baseline_lightfm.py  baseline_two_tower.py  build_graph.py  build_hard_negatives.py  build_index.py  build_similarity.py  cleanup_drive_outputs.py  compress_graph.py  eval_coldstart.py  evaluate.py  evaluate_embeddings.py  export_r10_comparison.py  export_results.py  infer.py  infer_coldstart.py  match_top10.py  match_top10_all_models.py  merge_multiyear_projects.py  run_sweep.py  train_coldstart.py  train_gnn.py  visualize_graph.py
src/: utils.py
src/baselines/: lightfm_baseline.py  neighborhood_cf.py  two_tower.py
src/data/: loader.py
src/eval/: metrics.py  ranking.py
src/graph/: builder.py  schema.py  similarity.py  split.py
src/models/: compgcn.py  encoder.py  gfm.py  lightgcn.py  projection.py  rgcn.py  sehgnn.py  srhgn.py
src/serving/: index.py  retrieve.py
src/training/: losses.py  sampler.py  trainer.py
tests/: conftest.py  test_builder.py  test_config.py  test_encoder.py  test_losses.py  test_neighborhood_cf.py  test_ranking.py  test_sampler.py  test_schema.py  test_similarity.py  test_split.py  test_two_tower.py
